--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Web Desktop</title>
   </head>
   <body>
-    <div id="desktop"></div>
+    <div id="desktop" class="container"></div>
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
