Add more to welcome

--- a/windows/welcome.html
+++ b/windows/welcome.html
@@ -11,6 +11,8 @@
     <title>Welcome</title>
   </head>
   <body>     
-    <p>Welcome to WebDesktop!</p>
+    <h2>Welcome to WebDesktop!</h2>
+    <p>WebDesktop is a simple desktop in a browser.</p>
+    <p>It should behave similar to a normal computer desktop.</p>
   </body>
 </html>
