--- a/windows/clock.html
+++ b/windows/clock.html
@@ -11,18 +11,28 @@
     <title>Clock</title>
   </head>
   <body>
-    <p id="text"></p>
-    <div id="clock"></div>
+    <canvas id="clock" width="100%" height="calc(450px-4rem)"></canvas>
+    <p id="digital"></p>
     <script>
-      text = document.getElementById("text")
+      digital = document.getElementById("digital")
+      analogue = document.getElementById("clock")
+
+      ctx = analogue.getContext("2d")
+      var radius = analogue.height / 2
+      ctx.translate(radius, radius)
+      radius = radius * 0.9
 
       update()
 
-      setInterval(update, 10)
+      setInterval(update, 1000)
 
       function update () {
         const datetime = Date()
-        text.innerText = datetime.toString()
+        digital.innerText = datetime.toString()
+
+        ctx.arc(0, 0, radius, 0 , 2 * Math.PI)
+        ctx.fillStyle = "white"
+        ctx.fill()
       }
     </script>
   </body>
