Set canvas size

--- a/windows/clock.html
+++ b/windows/clock.html
@@ -11,7 +11,7 @@
     <title>Clock</title>
   </head>
   <body>
-    <canvas id="clock" width="100%" height="calc(450px-4rem)"></canvas>
+    <canvas id="clock" width="350px" height="350px"></canvas>
     <p id="digital"></p>
     <script>
       digital = document.getElementById("digital");
