--- a/windows/clock.html
+++ b/windows/clock.html
@@ -30,9 +30,14 @@
         const datetime = Date();
         digital.innerText = datetime.toString();
 
-        ctx.arc(0, 0, radius, 0 , 2 * Math.PI);
+        ctx.arc(0, 0, radius, 0 , 2*Math.PI);
         ctx.fillStyle = "black";
         ctx.fill();
+
+        for (i=0; i<12; i++) {
+          angle = i * 2 * Math.PI / 12;
+          ctx.arc(sin(angle)*radius, cos(angle)*radius, radius/12, 0, 2*Math.PI);
+        };
       };
     </script>
   </body>
