--- a/windows/clock.html
+++ b/windows/clock.html
@@ -35,8 +35,10 @@
         ctx.fill();
 
         for (i=0; i<12; i++) {
-          angle = i * 2 * Math.PI / 12;
-          ctx.arc(sin(angle)*radius, cos(angle)*radius, radius/12, 0, 2*Math.PI);
+          angle = i * Math.PI / 6;
+          ctx.arc(Math.sin(angle)*radius*0.8, Math.cos(angle)*radius*0.8, radius/12, 0, 2*Math.PI);
+          ctx.fillStyle = "white"
+          ctx.fill()
         };
       };
     </script>
