--- a/windows/clock.html
+++ b/windows/clock.html
@@ -30,16 +30,17 @@
         const datetime = Date();
         digital.innerText = datetime.toString();
 
-        ctx.arc(0, 0, radius, 0 , 2*Math.PI);
         ctx.fillStyle = "black";
-        ctx.fill();
+        ctx.arc(0, 0, radius, 0 , 2*Math.PI);
 
+        
+        ctx.fillStyle = "white";
         for (i=0; i<12; i++) {
           angle = i * Math.PI / 6;
           ctx.arc(Math.sin(angle)*radius*0.8, Math.cos(angle)*radius*0.8, radius/12, 0, 2*Math.PI);
-          ctx.fillStyle = "white"
-          ctx.fill()
         };
+
+        ctx.fill();
       };
     </script>
   </body>
