--- a/windows/clock.html
+++ b/windows/clock.html
@@ -34,11 +34,12 @@
         ctx.arc(0, 0, radius, 0 , 2*Math.PI);
         ctx.fill();
         
-        ctx.fillStyle = "white";
+        ctx.strokeStyle = "white";
         for (i=0; i<12; i++) {
           angle = i * Math.PI / 6;
+          ctx.moveTo(Math.sin(angle)*radius*0.8, Math.cos(angle)*radius*0.8)
           ctx.arc(Math.sin(angle)*radius*0.8, Math.cos(angle)*radius*0.8, radius/12, 0, 2*Math.PI);
-          ctx.fill();
+          ctx.stroke();
         };
       };
     </script>
